@@ -66,6 +66,8 @@ Trunk (unreleased changes)
     HADOOP-1975 HBase tests failing with java.lang.NumberFormatException
     HADOOP-1990 Regression test instability affects nightly and patch builds
     HADOOP-1996 TestHStoreFile fails on windows if run multiple times
+    HADOOP-1937 When the master times out a region server's lease, it is too 
+                aggressive in reclaiming the server's log.
 
   IMPROVEMENTS
     HADOOP-1737 Make HColumnDescriptor data publically members settable
